[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r46010

--- a/debian/po/ar.po
+++ b/debian/po/ar.po
@@ -32,25 +32,25 @@ msgstr "المتابعة دون محمّل إقلاع"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "فشل تركيب /target/proc"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "فشل تركيب نظام ملفّات proc عند /target/proc."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr ""
+msgstr "تفقّد /var/log/syslog أو انظر الطرفية الوهمية الرابعة للتفاصيل."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "تحذير: قد يكون نظامك غير قابلٍ للإقلاع!"
 
 #. Type: note
 #. Description
