--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -4,17 +4,17 @@
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
 # Catalan messages for debian-installer.
-# Copyright 2002, 2003, 2004, 2005, 2006 Software in the Public Interest, Inc.
+# Copyright 2002, 2003, 2004, 2005, 2006, 2007 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
-# Jordi Mallach <jordi@debian.org>, 2002, 2003, 2004, 2006.
-# Guillem Jover <guillem@debian.org>, 2005.
+# Jordi Mallach <jordi@debian.org>, 2002, 2003, 2004, 2006, 2007.
+# Guillem Jover <guillem@debian.org>, 2005, 2007.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer etch\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-11-03 14:57+0100\n"
+"PO-Revision-Date: 2007-02-25 12:39+0100\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -32,25 +32,26 @@ msgstr "Continua sense un carregador"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "No s'ha pogut muntar /target/proc"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Ha fallat el muntatge del sistema de fitxers proc a /target/proc."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"Comproveu /var/log/syslog o vegeu la consola virtual 4 per als detalls."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Avís: el vostre sistema pot no ser arrencable!"
 
 #. Type: note
 #. Description
