--- a/debian/po/eo.po
+++ b/debian/po/eo.po
@@ -9,13 +9,13 @@
 # This file is distributed under the same license as debian-installer.
 #
 # Samuel Gimeno <sgimeno@gmail.com>, 2005.
-# Serge Leblanc <serge.leblanc@wanadoo.fr>, 2005-2006.
+# Serge Leblanc <serge.leblanc@wanadoo.fr>, 2005-2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: eo\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-11-02 20:25+0100\n"
+"PO-Revision-Date: 2007-03-15 11:26+0100\n"
 "Last-Translator: Serge Leblanc <serge.leblanc@wanadoo.fr>\n"
 "Language-Team: Esperanto <debian-l10n-esperanto@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -27,31 +27,32 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Daŭrigu sen ekŝargilo"
+msgstr "Daŭrigi sen ekŝargilo"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Surmetado de '/target/proc' malsukcesas"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Surmetendado de 'proc'-a dosiersistemo en '/target/proc' malsukcesas"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"Vidu '/var/log/syslog' aŭ la kvara virtuala konzolo por akiri detalojn."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Atentu: via sistemo eble malaktivigus!"
 
 #. Type: note
 #. Description
