--- a/debian/po/fi.po
+++ b/debian/po/fi.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-09-27 08:09+0300\n"
+"PO-Revision-Date: 2007-02-19 16:44+0200\n"
 "Last-Translator: Tapio Lehtonen <tale@debian.org>\n"
 "Language-Team: Finnish <debian-l10n-finnish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -34,25 +34,29 @@ msgstr "Jatketaan ilman alkulatausohjelmaa"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "/target/proc:n liittäminen ei onnistunut"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
 msgstr ""
+"proc-tiedostojärjestelmän liittäminen liitoskohtaan /target/proc ei "
+"onnistunut."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"Tarkista tiedosto /var/log/syslog tai katso tarkempaa tietoa "
+"virtuaalikonsolista 4."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Varoitus: Järjestelmä ei ehkä pysty käynnistymään!"
 
 #. Type: note
 #. Description
