--- a/debian/po/gu.po
+++ b/debian/po/gu.po
@@ -35,25 +35,25 @@ msgstr "બૂટ લોડર વગર આગળ વધો"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "/target/proc માઉન્ટ કરવામાં નિષ્ફળ"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "/target/proc પર proc ફાઇલ સિસ્ટમ માઉન્ટ કરવામાં નિષ્ફળ ગયું"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr ""
+msgstr "/var/log/syslog તપાસો અથવા માહિતી માટે વર્ચયુઅલ કોન્સોલ ૪ જુઓ."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "ચેતવણી: તમારી સિસ્ટમ કદાચ શરૂ થઇ શકશે નહી!"
 
 #. Type: note
 #. Description
