--- a/debian/po/hr.po
+++ b/debian/po/hr.po
@@ -31,25 +31,25 @@ msgstr "Nastavi bez boot učitavača"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Montiranje /target/proc nije uspjelo"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Montiranje proc datotečnog sustava na /target/proc nije uspjelo."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr ""
+msgstr "Za pojedinosti provjerite /var/log/syslog ili četvrtu konzolu."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Pozor: vaš sustav možda se ne može pokrenuti!"
 
 #. Type: note
 #. Description
