--- a/debian/po/ko.po
+++ b/debian/po/ko.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-10-17 21:41-0400\n"
+"PO-Revision-Date: 2007-01-29 20:58-0500\n"
 "Last-Translator: Sunjae park <darehanl@gmail.com>\n"
 "Language-Team:  Korean <debian-l10n-korean@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -31,25 +31,27 @@ msgstr "부트 로더 없이 계속"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "/target/proc을 마운트하는 데 실패했습니다"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "/target/proc의 proc 파일 시스템을 마운트하는 데 실패했습니다."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"자세한 정보를 확인하시려면 /var/log/messages를 보시거나 가상 콘솔 4을보십시"
+"오."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "경고: 시스템이 부팅하지 않을 수도 있습니다!"
 
 #. Type: note
 #. Description
