--- a/debian/po/ku.po
+++ b/debian/po/ku.po
@@ -32,25 +32,27 @@ msgstr "Bêyî pêşbarkerê bidomîne"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Mountkirina /target/proc serneket"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Mountkirina pergala pelan proc di /target/proc de serneket."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"Ji bo agahiyên kîtekît yan li pela /var/log/syslog binihêrî yan jî konsola "
+"çaran binihêrî."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Hişyar: Dibe ku pergala te nayê boot kirin!"
 
 #. Type: note
 #. Description
