--- a/debian/po/lv.po
+++ b/debian/po/lv.po
@@ -33,25 +33,27 @@ msgstr "Turpināt bez sāknētāja"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Nevarēju piemontēt /target/proc"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Proc failu sistēmas montēšana uz /target/proc bija neveiksmīga."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"Pārbaudiet /var/log/syslog vai skatieties sīkāk ceturtajā virtuālajā konsolē "
+"(ALT+F4)."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Uzmanību: Jūsu sistēma varētu būt nesāknējama!"
 
 #. Type: note
 #. Description
