--- a/debian/po/ml.po
+++ b/debian/po/ml.po
@@ -36,25 +36,25 @@ msgstr "ബൂട്ട് ലോഡര്‍ ഇല്ലാതെ തുടര
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "/target/proc മൌണ്ട് ചെയ്യുന്നതില്‍ പരാജയപ്പെട്ടു"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "proc ഫയല്‍ സിസ്റ്റം /target/proc ല്‍ മൌണ്ട് ചെയ്യുന്നതില്‍ പരാജയപ്പെട്ടു."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr ""
+msgstr "വിവരങ്ങള്‍ക്കായി /var/log/syslog പരിശോധിക്കുക അല്ലെങ്കില്‍ വിര്‍ച്വല്‍ കണ്‍സോള്‍ 4 കാണുക."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "മുന്നറിയിപ്പ്: നിങ്ങളുടെ സിസ്റ്റം ബൂട്ട് ചെയ്യാന്‍ പറ്റാതായിട്ടുണ്ടാകാം!"
 
 #. Type: note
 #. Description
