--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -45,25 +45,26 @@ msgstr "Continuare fără încărcător de sistem"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Eşec la montarea /target/proc"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Montarea sistemului de fişiere proc în /target/proc a eşuat."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"Verificaţi /var/log/syslog sau consola virtuală numărul 4 pentru detalii."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Atenţie: Sistemul dumneavoastră s-ar putea să nu mai pornească!"
 
 #. Type: note
 #. Description
