--- a/debian/po/sl.po
+++ b/debian/po/sl.po
@@ -23,7 +23,7 @@ msgstr ""
 "Project-Id-Version: sl\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2007-01-04 14:08+0100\n"
+"PO-Revision-Date: 2007-02-19 07:52+0100\n"
 "Last-Translator: Matej Kovačič <matej.kovacic@owca.info>\n"
 "Language-Team: Slovenian <lugos-slo@lugos.si>\n"
 "MIME-Version: 1.0\n"
@@ -45,25 +45,26 @@ msgstr "Nadaljuj brez zagonskega nalagalnika"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Nisem mogel priklopiti /target/proc"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Priklapljanje proc datotečnega sistema na /target/proc ni uspelo."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"Preverite /var/log/messages ali poglejte navidezno konzolo 4 za podrobnosti."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Opozorilo: vašega sistema morda ni mogoče zagnati!"
 
 #. Type: note
 #. Description
