--- a/debian/po/uk.po
+++ b/debian/po/uk.po
@@ -8,13 +8,13 @@
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 #
-# Eugeniy Meshcheryakov <eugen@debian.org>, 2005, 2006.
+# Eugeniy Meshcheryakov <eugen@debian.org>, 2005, 2006, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: uk\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-10-05 21:44+0200\n"
+"PO-Revision-Date: 2007-02-18 18:56+0100\n"
 "Last-Translator: Eugeniy Meshcheryakov <eugen@debian.org>\n"
 "Language-Team: Ukrainian\n"
 "MIME-Version: 1.0\n"
@@ -35,25 +35,25 @@ msgstr "Продовжити без завантажувача"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Не вдалося змонтувати /target/proc"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Не вдалося змонтувати файлову систему proc в /target/proc."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr ""
+msgstr "Подробиці дивіться в /var/log/syslog або на віртуальній консолі 4."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Попередження: ваша система, можливо, не зможе завантажитися!"
 
 #. Type: note
 #. Description
