--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: debian-installer Level 1\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-10-16 15:34+0930\n"
+"PO-Revision-Date: 2007-01-10 19:27+1030\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -36,25 +36,27 @@ msgstr "Tiếp tục không có bộ nạp khởi động"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Việc lắp « /target/proc » bị lỗi"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Việc lắp hệ thống tập tin proc vào « /target/proc » bị lỗi."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"Xem bản ghi hệ thống « /var/log/syslog » hoặc bàn giao tiếp ảo 4 để tìm chi "
+"tiết."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Cảnh báo : hệ thống của bạn có thể không có khả năng khởi động !"
 
 #. Type: note
 #. Description
