--- a/debian/po/be.po
+++ b/debian/po/be.po
@@ -20,13 +20,13 @@ msgstr ""
 "Project-Id-Version: be\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-12-10 23:34+0300\n"
-"Last-Translator: Pavel Piatruk <berserker@neolocation.com>\n"
+"PO-Revision-Date: 2007-01-15 11:16+0100\n"
+"Last-Translator: Hleb Rubanau <g.rubanau@gmail.com>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
+"X-Generator: Pootle 0.10.1\n"
 
 #. Type: text
 #. Description
@@ -39,25 +39,26 @@ msgstr "Працягваць без загрузчыка"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Не атрымалася прымацаваць /target/proc"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
 msgstr ""
+"Не атрымалася прымацаваць файлавую сістэму proc да пункта /target/proc."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr ""
+msgstr "Падрабязнасці чытайце ў /var/log/syslog і на віртуальнай кансолі 4."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Увага: Вашая сістэма можа быць няздольная да загрузкі!"
 
 #. Type: note
 #. Description
