--- a/debian/po/bn.po
+++ b/debian/po/bn.po
@@ -13,15 +13,15 @@
 # Khandakar Mujahidul Islam <suzan@bengalinux.org>, 2005, 2006.
 # Progga <progga@BengaLinux.Org>, 2005, 2006.
 # Jamil Ahmed <jamil@bengalinux.org>, 2006.
-# Mahay Alam Khan (মাহে আলম খান) <makl10n@yahoo.com>, 2006.
+# Mahay Alam Khan (মাহে আলম খান) <makl10n@yahoo.com>, 2007.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-11-21 00:34+0600\n"
-"Last-Translator: Jamil Ahmed <jamil@bengalinux.org>\n"
+"PO-Revision-Date: 2007-03-14 00:50+0600\n"
+"Last-Translator: Mahay Alam Khan (মাহে আলম) <mahayalamkhan@gmail.com>\n"
 "Language-Team: Bangla <core@BengaLinux.Org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,25 +38,25 @@ msgstr "বুট লোডার ছাড়াই এগিয়ে যাও"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "/target/proc মাউন্ট করার যায় নি"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "proc ফাইল সিস্টেমকে /target/proc-এ মাউন্ট করা যায় নি।"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr ""
+msgstr "বিস্তারিত জানার জন্য /var/log/syslog পড়ুন অথবা চতুর্থ ভার্চুয়াল কনসোল দেখুন।"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "সতর্কবাণী: আপনার সিস্টেমটি হয়তো বুট করা যাবে না!"
 
 #. Type: note
 #. Description
