--- a/debian/po/cs.po
+++ b/debian/po/cs.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-11-04 17:19+0100\n"
+"PO-Revision-Date: 2007-02-04 16:43+0100\n"
 "Last-Translator:  Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team:  Czech <provoz@debian.cz>\n"
 "MIME-Version: 1.0\n"
@@ -30,25 +30,25 @@ msgstr "Pokračovat bez zavaděče"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Připojení /target/proc selhalo"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Připojení souborového systému proc pod /target/proc selhalo."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr ""
+msgstr "Podrobnosti naleznete ve /var/log/syslog nebo na 4. virtuální konzoli."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Varování: Váš systém nemusí nabootovat!"
 
 #. Type: note
 #. Description
