--- a/debian/po/el.po
+++ b/debian/po/el.po
@@ -3,7 +3,7 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of el.po to el
+# translation of el.po to
 # Greek messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
@@ -12,16 +12,17 @@
 # Emmanuel Galatoulas <galas@tee.gr>, 2004.
 # Konstantinos Margaritis <markos@debian.org>, 2004, 2006.
 # Greek Translation Team <debian-l10n-greek@lists.debian.org>, 2004, 2005.
-# quad-nrg.net <galaxico@quad-nrg.net>, 2005, 2006.
+# quad-nrg.net <galaxico@quad-nrg.net>, 2005, 2006, 2007.
 # quad-nrg.net <yodesy@quad-nrg.net>, 2006.
+# QUAD-nrg.net <yodesy@quad-nrg.net>, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: el\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-09-27 17:50+0300\n"
-"Last-Translator: quad-nrg.net <yodesy@quad-nrg.net>\n"
-"Language-Team: el <debian-l10n-greek@lists.debian.org>\n"
+"PO-Revision-Date: 2007-02-20 12:26+0200\n"
+"Last-Translator: galaxico\n"
+"Language-Team:  <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -39,25 +40,29 @@ msgstr "Συνέχιση χωρίς φορτωτή εκκίνησης"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Σφάλμα κατά τη προσάρτηση του /target/proc"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
 msgstr ""
+"Η προσάρτηση του εικονικού συστήματος αρχείων procfs στο /target/proc "
+"απέτυχε."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"Ελέγξτε το αρχείο /var/log/syslog ή δείτε την εικονική κονσόλα 4 για "
+"λεπτομέρειες."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Προειδοποίηση: Το σύστημά σας πιθανόν να μην είναι εκκινήσιμο!"
 
 #. Type: note
 #. Description
