--- a/debian/po/et.po
+++ b/debian/po/et.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-11-08 20:35+0300\n"
-"Last-Translator: Siim Põder <windo@p6drad-teel.net>\n"
+"PO-Revision-Date: 2007-02-17 10:45+0300\n"
+"Last-Translator: Siim Põder <siim@p6drad-teel.net>\n"
 "Language-Team: Eesti <linuxiabi@hot.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26,25 +26,25 @@ msgstr "Alglaadurita jätkamine"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "/target/proc haakimine nurjus"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Failisüsteemi /target/proc ei õnnestunud külge haakida."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr ""
+msgstr "Detailid leiad failist /var/log/syslog või 4. virtuaalkonsoolilt."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Hoiatus: Su süsteem võib olla alglaadimatu!"
 
 #. Type: note
 #. Description
