--- a/debian/po/he.po
+++ b/debian/po/he.po
@@ -9,13 +9,14 @@
 # This file is distributed under the same license as debian-installer.
 #
 #
-# Lior Kaplan <kaplan@debian.org>, 2004-2006.
+# Lior Kaplan <kaplan@debian.org>, 2004-2007.
+# Amit Dovev <debian.translator@gmail.com>, 2007
 msgid ""
 msgstr ""
 "Project-Id-Version: he\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-09-26 23:23+0300\n"
+"PO-Revision-Date: 2007-02-07 01:04+0200\n"
 "Last-Translator: Lior Kaplan <kaplan@debian.org>\n"
 "Language-Team: Hebrew <debian-hebrew-common@lists.alioth.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -34,25 +35,26 @@ msgstr "המשך ללא מנהל אתחול"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "נכשל העיגון של /target/proc"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "עיגון מערכת הקבצים מסוג proc ב- /target/proc נכשל."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"בדוק את /var/log/syslog או את הקונסול הווירטואלי מספר 4 בשביל פרטים נוספים."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "אזהרה: יתכן שהמערכת שלך אינה ניתנת לאתחול!"
 
 #. Type: note
 #. Description
