--- a/debian/po/hi.po
+++ b/debian/po/hi.po
@@ -3,10 +3,6 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of hi.po to Hindi
-# translation of debian-installer_packages_po.po to
-# translation of debian-installer_packages_po.po to
-# translation of debian-installer_packages_po.po to
 # Debian Installer master translation file template
 # Don't forget to properly fill-in the header of PO files
 # Debian Installer translators, please read the D-I i18n documentation
@@ -19,8 +15,8 @@ msgstr ""
 "Project-Id-Version: hi\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-10-06 02:35+0530\n"
-"Last-Translator: Nishant Sharma <me at nishants.net>\n"
+"PO-Revision-Date: 2007-01-24 12:56+0530\n"
+"Last-Translator: Nishant Sharma <me at nishants dot net>\n"
 "Language-Team: Hindi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -39,25 +35,25 @@ msgstr "बिना बूटलोडर के जारी रखें"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "/target/proc को आरूढ़ करने में असफल."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "proc फाइलतंत्र को /target/proc पर माउंट करने में असफल."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr ""
+msgstr "विस्तृत सूचना के लिए /var/log/messages या वर्चुअल कंसोल 4 देखें।"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "चेतावनी: आपका सिस्टम बूट न होने योग्य हो सकता है!"
 
 #. Type: note
 #. Description
