--- a/debian/po/id.po
+++ b/debian/po/id.po
@@ -12,7 +12,7 @@
 # Translators:
 # * Parlin Imanuel Toh (parlin_i@yahoo.com), 2004-2005.
 # * I Gede Wijaya S (gwijayas@yahoo.com), 2004.
-# * Arief S F (arief@gurame.fisika.ui.ac.id), 2004-2006
+# * Arief S F (arief@gurame.fisika.ui.ac.id), 2004-2007
 # * Setyo Nugroho (setyo@gmx.net), 2004.
 #
 msgid ""
@@ -20,14 +20,13 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-10-22 21:59+0200\n"
+"PO-Revision-Date: 2007-02-21 17:55+0700\n"
 "Last-Translator: Arief S Fitrianto <arief@gurame.fisika.ui.ac.id>\n"
 "Language-Team: Debian Indonesia Team <debian-l10n-id@gurame.fisika.ui.ac."
 "id>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Indonesian\n"
 "X-Poedit-Country: INDONESIA\n"
 
 #. Type: text
@@ -41,25 +40,25 @@ msgstr "Teruskan tanpa boot loader"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Gagal mengaitkan /target/proc"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Pengaitan sistem berkas proc pada /target/proc gagal."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr ""
+msgstr "Periksa /var/log/syslog atau lihat konsol maya no. 4."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Perhatian: Sistem Anda mungkin tidak dapat diboot!"
 
 #. Type: note
 #. Description
