--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -26,9 +26,9 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-10-03 22:17+0200\n"
+"PO-Revision-Date: 2007-01-27 14:39+0100\n"
 "Last-Translator: Stefano Canepa <sc@linux.it>\n"
-"Language-Team:   Italian <debian-l10n-italian@lists.debian.org>\n"
+"Language-Team: Italian <debian-l10n-italian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -44,25 +44,26 @@ msgstr "Continuare senza un boot loader"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Mount di /target/proc fallito"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Il mount del file system proc su /target/proc è fallito."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"Controllare /var/log/syslog o la terza console virtuale per i dettagli."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Attenzione: il sistema potrebbe non essere avviabile!"
 
 #. Type: note
 #. Description
