--- a/debian/po/lt.po
+++ b/debian/po/lt.po
@@ -6,7 +6,7 @@
 # Lithuanian messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
-# Kęstutis Biliūnas <kebil@kaunas.init.lt>, 2004, 2005, 2006.
+# Kęstutis Biliūnas <kebil@kaunas.init.lt>, 2004...2007.
 # Marius Gedminas <mgedmin@b4net.lt>, 2004.
 # Darius Skilinskas <darius10@takas.lt>, 2005.
 #
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-09-27 12:01+0300\n"
+"PO-Revision-Date: 2007-02-05 09:48+0200\n"
 "Last-Translator: Kęstutis Biliūnas <kebil@kaunas.init.lt>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "MIME-Version: 1.0\n"
@@ -33,25 +33,26 @@ msgstr "Tęsti be pradinio įkėliklio"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Nepavyko prijungti /target/proc"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Nepavyko prijungti 'proc' failų sistemos prie /target/proc."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"Detaliau žiūrėkite į /var/log/syslog arba ketvirtojoje virtualioje konsolėje."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Dėmesio: Jūsų sistema gali nepasikelti!"
 
 #. Type: note
 #. Description
