--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-09-27 00:57+0200\n"
-"Last-Translator: Bart Cornelis <cobaco@skolelinux.no>\n"
+"PO-Revision-Date: 2007-02-13 22:27+0100\n"
+"Last-Translator: Bart Cornelis <cobaco@linux.be>\n"
 "Language-Team: Dutch <debian-l10n-dutch@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,25 +33,27 @@ msgstr "Verder gaan zonder opstartlader"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Aankoppelen van /target/proc is mislukt"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Aankoppelen van het proc-bestandssysteem op /target/proc is mislukt."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"Controleer /var/log/syslog of kijk op de vierde virtuele console (VT4) voor "
+"de details."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Waarschuwing: mogelijk is uw systeem niet opstartbaar!"
 
 #. Type: note
 #. Description
