--- a/debian/po/nn.po
+++ b/debian/po/nn.po
@@ -3,21 +3,22 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of nn.po to Norwegian nynorsk
+# translation of nn.po to Norwegian Nynorsk
+# translation of d-i_nn.po to
 # Norwegian Nynorsk messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 #
 # Håvard Korsvoll <korsvoll@skulelinux.no>, 2004, 2005, 2006.
-# Håvard Korsvoll <korsvoll@gmail.com>, 2006.
+# Håvard Korsvoll <korsvoll@gmail.com>, 2006, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: nn\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-11-08 23:46+0100\n"
-"Last-Translator: Håvard Korsvoll <korsvoll@gmail.com>\n"
-"Language-Team: Norwegian nynorsk <i18n-nn@lister.ping.uio.no>\n"
+"PO-Revision-Date: 2007-02-26 23:55+0100\n"
+"Last-Translator: \n"
+"Language-Team: Norwegian Nynorsk <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -36,25 +37,25 @@ msgstr "Gå vidare utan oppstartslastar"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Klarte ikkje å montera /target/proc"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Montering av proc-filsystemet på /target/proc feila."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr ""
+msgstr "Sjekk /var/log/messages eller sjå virituelt konsoll 4 for detaljar."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Åtvaring: Det kan vere systemet ditt ikkje vil starte opp!"
 
 #. Type: note
 #. Description
