--- a/debian/po/pa.po
+++ b/debian/po/pa.po
@@ -14,13 +14,14 @@
 # Jaswinder Singh Phulewala <jaswinderphulewala@yahoo.com>, 2005, 2006.
 # Amanpreet Singh Alam <apbrar@gmail.com>, 2006.
 # A S Alam <apbrar@gmail.com>, 2006.
+# A S Alam <aalam@users.sf.net>, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: pa\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-11-25 12:39+0530\n"
-"Last-Translator: A S Alam <apbrar@gmail.com>\n"
+"PO-Revision-Date: 2007-02-02 15:50+0530\n"
+"Last-Translator: A S Alam <aalam@users.sf.net>\n"
 "Language-Team: Punjabi <fedora-trans-pa@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -39,25 +40,25 @@ msgstr "ਬੂਟ ਲੋਡਰ ਨਾਲ ਜਾਰੀ ਕਰੋ"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "/target/proc ਨੂੰ ਮਾਊਂਟ ਕਰਨ ਵਿੱਚ ਅਸਫਲ"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "/target/proc ਤੇ proc ਫਾਇਲ ਸਿਸਟਮ ਮਾਊਂਟ ਕਰਨ ਵਿੱਚ ਅਸਫਲ।"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr ""
+msgstr "ਵਿਸਥਾਰ ਲਈ /var/log/syslog ਦੀ ਜਾਂਚ ਕਰੋ ਜਾਂ ਆਰਜੀ ਕੰਸੋਲ 4 ਵੇਖੋ।"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "ਚੇਤਾਵਨੀ: ਤੁਹਾਡਾ ਸਿਸਟਮ ਨਾ ਬੂਟ ਹੋਣ ਯੋਗ ਹੋ ਸਕਦਾ ਹੈ!"
 
 #. Type: note
 #. Description
