--- a/debian/po/tl.po
+++ b/debian/po/tl.po
@@ -4,10 +4,10 @@
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
 # Tagalog messages for debian-installer.
-# Copyright (C) 2004, 2005, 2006 Software in the Public Interest, Inc.
+# Copyright (C) 2004-2007 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 # Ipinamamahagi ang talaksang ito alinsunod sa lisensiya ng debian-installer.
-# Eric Pareja <xenos@upm.edu.ph>, 2004, 2005, 2006
+# Eric Pareja <xenos@upm.edu.ph>, 2004-2007
 # Rick Bahague, Jr. <rbahaguejr@gmail.com>, 2004
 # Reviewed by Roel Cantada on Feb-Mar 2005.
 # Sinuri ni Roel Cantada noong Peb-Mar 2005.
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-11-24 03:00+0800\n"
+"PO-Revision-Date: 2007-02-28 06:56+0800\n"
 "Last-Translator: Eric Pareja <xenos@upm.edu.ph>\n"
 "Language-Team: Tagalog <debian-tl@banwa.upm.edu.ph>\n"
 "MIME-Version: 1.0\n"
@@ -39,25 +39,27 @@ msgstr "Magpatuloy na walang boot loader"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Bigo ang pag-mount ng /target/proc"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Bigo ang pag-mount ng proc file system sa /target/proc."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"Basahin ang /var/log/syslog o tignan ang virtuwal na konsol 4 para sa mga "
+"detalye."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Babala: Maaaring hindi mag-boot ang inyong sistema!"
 
 #. Type: note
 #. Description
