--- a/debian/po/wo.po
+++ b/debian/po/wo.po
@@ -3,54 +3,22 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
-# translation of wo[1].po to Wolof
 # translation of wo.po to Wolof
-# translation of Debian Installer to Wolof
-# Mouhamadou Mamoune Mbacke <mouhamadoumamoune@gmail.com>, 2005, 2006.
 #
 #
+# Mouhamadou Mamoune Mbacke <mouhamadoumamoune@gmail.com>, 2005, 2006, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: wo[1]\n"
+"Project-Id-Version: wo\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-10-18 00:27+0000\n"
+"PO-Revision-Date: 2007-02-01 13:53+0000\n"
 "Last-Translator: Mouhamadou Mamoune Mbacke <mouhamadoumamoune@gmail.com>\n"
-"Language-Team: Wolof <debian-boot@lists.debian.org>\n"
+"Language-Team: Wolof\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.9.1\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #. Type: text
 #. Description
@@ -63,25 +31,26 @@ msgstr "Kontine ci ludul sëfkatu boot bi"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Manula monte /target/proc"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Monte sistem u fiise bu proc ci /target/proc antuwul."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"Xoolal  /var/log/syslog walla nga seet Konsol wirtuwel 4 ngir am ay leeral."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Wattandiku: Sa sistem bi amaana du naŋgoo boot!"
 
 #. Type: note
 #. Description
