--- a/debian/po/zh_CN.po
+++ b/debian/po/zh_CN.po
@@ -9,14 +9,14 @@
 # This file is distributed under the same license as debian-installer.
 #
 # Translated by bbbush (2004), Carlos Z.F. Liu (2004,2005,2006) and
-# Ming Hua (2005,2006).
+# Ming Hua (2005,2006,2007).
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2006-10-17 20:51-0500\n"
+"PO-Revision-Date: 2007-01-29 05:01-0500\n"
 "Last-Translator: Ming Hua <minghua@rice.edu>\n"
 "Language-Team: Debian Chinese [GB] <debian-chinese-gb@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -34,25 +34,25 @@ msgstr "不安装启动引导器，继续"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "无法挂载 /target/proc"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "无法将 proc 文件系统挂载到 /target/proc 上。"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr ""
+msgstr "请检查 /var/log/syslog 或查看第四虚拟控制台以获得详细信息。"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "警告：您的系统可能将无法启动！"
 
 #. Type: note
 #. Description
