multiply all menu-item-numbers by 100
r46255

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nobootloader (1.19) UNRELEASED; urgency=low
+
+  * Multiply menu-item-numbers by 100
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 10 Apr 2007 13:53:49 -0400
+
 nobootloader (1.18) UNRELEASED; urgency=low
 
   * Merge from Ubuntu, with some improvements:
