--- a/debian/changelog
+++ b/debian/changelog
@@ -1,17 +1,23 @@
-nobootloader (1.19) UNRELEASED; urgency=low
+nobootloader (1.18) unstable; urgency=low
 
-  * Multiply menu-item-numbers by 100
-
- -- Joey Hess <joeyh@debian.org>  Tue, 10 Apr 2007 13:53:49 -0400
-
-nobootloader (1.18) UNRELEASED; urgency=low
-
+  [ Colin Watson ]
   * Merge from Ubuntu, with some improvements:
     - Install and run mkvmlinuz on Pegasos if the kernel didn't already do
       that for us.
     - Mount /target/proc for mkvmlinuz.
 
- -- Colin Watson <cjwatson@debian.org>  Thu, 22 Mar 2007 00:27:06 +0000
+  [ Joey Hess ]
+  * Multiply menu-item-numbers by 100
+
+  [ Updated translations ]
+  * Bengali (bn.po) by Mahay Alam Khan (মাহে আলম)
+  * Dzongkha (dz.po) by translator
+  * Esperanto (eo.po) by Serge Leblanc
+  * Spanish (es.po) by Javier Fernández-Sanguino Peña
+  * Tagalog (tl.po) by Eric Pareja
+  * Traditional Chinese (zh_TW.po) by Tetralet
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 10 Apr 2007 14:35:44 -0400
 
 nobootloader (1.17) unstable; urgency=low
 
