[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r46631

--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -24,7 +24,7 @@ msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2007-01-30 16:22+0200\n"
+"PO-Revision-Date: 2007-04-29 17:20+0300\n"
 "Last-Translator: Eddy Petrișor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -45,26 +45,26 @@ msgstr "Continuare fără încărcător de sistem"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Failed to mount /target/proc"
-msgstr "Eşec la montarea /target/proc"
+msgstr "Eșec la montarea /target/proc"
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr "Montarea sistemului de fişiere proc în /target/proc a eşuat."
+msgstr "Montarea sistemului de fișiere proc în /target/proc a eșuat."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
-"Verificaţi /var/log/syslog sau consola virtuală numărul 4 pentru detalii."
+"Verificați /var/log/syslog sau consola virtuală numărul 4 pentru detalii."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr "Atenţie: Sistemul dumneavoastră s-ar putea să nu mai pornească!"
+msgstr "Atenție: Sistemul dumneavoastră s-ar putea să nu mai pornească!"
 
 #. Type: note
 #. Description
@@ -75,9 +75,9 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Unele variabile trebuie să fie iniţializate în firmware-ul Genesi pentru ca "
-"sistemul să poată porni automat. La sfârşitul instalării, sistemul va "
-"reporni. La promptul de firmware iniţializaţi următoarele variabile de "
+"Unele variabile trebuie să fie inițializate în firmware-ul Genesi pentru ca "
+"sistemul să poată porni automat. La sfârșitul instalării, sistemul va "
+"reporni. La promptul de firmware inițializați următoarele variabile de "
 "firmware pentru activarea pornirii automate:"
 
 # XXX: nu prea îmi place începutul
@@ -88,7 +88,7 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"Există şi posibilitatea să porniţi nucleul manual introducând la promptul de "
+"Există și posibilitatea să porniți nucleul manual introducând la promptul de "
 "firmware:"
 
 #. Type: note
@@ -109,9 +109,9 @@ msgid ""
 msgstr ""
 "Unele variabile trebuie să fie ajustate în firmware-ul Netwinder NeTTrom "
 "pentru ca sistemul dumneavoastră să poată porni automat în Linux. La "
-"sfârşitul acestui stadiu al instalării sistemul va reporni şi firmware-ul va "
-"încerca să pornească automat. Puteţi abandona prin apăsarea unei taste. Veţi "
-"fi lăsaţi la sistemul de comenzi NeTTrom unde va trebui să executaţi "
+"sfârșitul acestui stadiu al instalării sistemul va reporni și firmware-ul va "
+"încerca să pornească automat. Puteți abandona prin apăsarea unei taste. Veți "
+"fi lăsați la sistemul de comenzi NeTTrom unde va trebui să executați "
 "următoarele comenzi:"
 
 #. Type: note
@@ -121,8 +121,8 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Va trebui să faceţi acest lucru doar o dată. După aceea, introduceţi comanda "
-"\"boot\" sau reporniţi sistemul pentru a continua în noul sistem instalat."
+"Va trebui să faceți acest lucru doar o dată. După aceea, introduceți comanda "
+"\"boot\" sau reporniți sistemul pentru a continua în noul sistem instalat."
 
 #. Type: note
 #. Description
@@ -137,7 +137,7 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Nu s-a instalat nici un încărcător de sistem, pentru că aşa aţi ales sau "
+"Nu s-a instalat nici un încărcător de sistem, pentru că așa ați ales sau "
 "pentru că arhitectura dumneavoastră nu suportă încă un încărcător de sistem."
 
 #. Type: note
@@ -147,5 +147,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Va trebui să porniţi manual cu nucleul ${KERNEL} pe partiţia ${BOOT}, iar "
+"Va trebui să porniți manual cu nucleul ${KERNEL} pe partiția ${BOOT}, iar "
 "${ROOT} trebuie plasat ca argument de nucleu."
